Alumni Details Page Updated

--- a/PESU_AT/src/main/resources/templates/user/alumni-details.html
+++ b/PESU_AT/src/main/resources/templates/user/alumni-details.html
@@ -34,8 +34,8 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>University Area, Action Area III</h5>
-								<h5>Newtown, Kolkata-700156</h5>
+								<h5>PES University 100 Feet Ring Road, Banashankari Stage III, Dwaraka Nagar, Banashankari</h5>
+								<h5>Bengaluru, Karnataka-560085</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -44,7 +44,7 @@
 						<div class="info">
 							<i class="icon ion-ios-telephone-outline"></i>
 							<div class="right-area">
-								<h5>033 2514-9006 </h5>
+								<h5>+91 80 26721983 </h5>
 								
 							</div><!-- right-area -->
 						</div><!-- info -->
@@ -54,8 +54,7 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h5>uem@edu.in </h5>
-								<h6>REPLY IN 24 HOURS</h6>
+								<h5>admissions@pes.edu </h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
