--- a/PESU_AT/src/main/resources/templates/register.html
+++ b/PESU_AT/src/main/resources/templates/register.html
@@ -114,7 +114,7 @@
                         </p>
                     </div>
                     <div class="form-group mb-3">
-                        <label class="form-label">Phonu Number</label>
+                        <label class="form-label">Phone Number</label>
                         <input class="form-control"
                                id="phonenum"
                                name="phonenum"
