Added Login and Logout feature to Index pages

--- a/PESU_AT/src/main/resources/templates/user/index.html
+++ b/PESU_AT/src/main/resources/templates/user/index.html
@@ -35,7 +35,7 @@
               <h3>PESU Alumni Tracker Portal</h3>
               <p>Creating an engaged, supportive alumni network is crucial to an institution’s success. If communication stops once graduates leave an institution, their understanding of the university will become stale. Instead, they should be kept informed so they can remain engaged and keep abreast on the progress of the university.
 The portal is aimed at maintaining a comprehensive database of all the alumni of this university to achieve the same.</p>
-              <a class="button button-hero" href="#">Check Below</a>
+              <a class="button button-hero" th:href="@{/login}">Logout</a>
             </div>
           </div>
         </div>
